--- a/oyvindmonsenblog/package.json
+++ b/oyvindmonsenblog/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.3.3",
+    "@sanity/code-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.3.3",
     "@sanity/default-layout": "^2.3.3",
