--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.2.6",
     "@sanity/image-url": "^0.140.22",
+    "autoprefixer": "^10.2.4",
     "next": "^10.0.6",
+    "postcss": "^8.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-syntax-highlighter": "^15.4.3",
-    "remark-gfm": "^1.0.0"
+    "remark-gfm": "^1.0.0",
+    "tailwindcss": "^2.0.3"
   }
 }
